# Data-driven-Optimization-of-EV-Charging-Coordination

./: .gitignore  CMakeLists.txt  CNN_corlat.ipynb  EDA.ipynb  Function.h  GNN.ipynb  GNN_corlat.ipynb  MLP_corlat_constraint_weighted_loss.ipynb  MLP_corlat_feasibility_promoting_weighted_BCELoss.ipynb  MLP_corlat_presolved_constraint_weighted_loss.ipynb  MLP_corlat_presolved_feasibility_promoting_weighted_BCELoss.ipynb  MLP_corlat_v1.ipynb  README.md  README_monashhpc.md  SOC.py  assignment_feasibility.ipynb  baseline_train_MLP.ipynb  constraint_weighted_loss.ipynb  constraint_weighted_loss.py  coordination.py  coordination_presolved.py  corlat.py  corlat_presolved.py  distributions.ipynb  distributions.py  generate_modelfiles_coordination.py  generate_solar_scenarios.py  main copy.cpp  main.cpp  main_dayahead.cpp  main_dayahead.py  make_corlat_dataset.ipynb  make_corlat_presolved_dataset.ipynb  optimization.sh  optimization_cpu.sh  preprocess_corlat.ipynb  preprocess_corlat_presolved.ipynb  preprocess_input.py  solar.bash  solar.ipynb  (+7 more)
.cache/clangd/index/: Function.h.86CF48F2F4DEBE34.idx  main.cpp.34C0874B3B7A7709.idx
Archive/: GNN.ipynb  GNN_corlat.ipynb  MLP_corlat_v1.ipynb  distributions.ipynb  generate_solar_scenarios.ipynb
Data/: Irradiance_39.xlsx  SOC.csv  arrival_departure_times.csv  arrival_distribution.csv  arrival_distribution.mat  arrival_distribution_predicted.csv  arrival_distribution_predicted.mat  departure_distribution.csv  departure_distribution.mat  departure_distribution_predicted.csv  departure_distribution_predicted.mat  scenarios.csv
Models/Tabular/: xgbmodel_feasibility_constrained.json
Notebooks/: distributions.ipynb  preprocess_data.ipynb  solar_generation.ipynb  solar_time.ipynb
artifacts/data-splits:v20/: train-data.table.json  val-data.table.json
artifacts/data-transforms:v7/: transforms.txt
